Job-Portal/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-scanner
  namespace: scanner
  labels:
    app: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: app-scanner
          image: 176285591771.dkr.ecr.ap-south-1.amazonaws.com/venkat-k8s:IMAGE_TAG

          ports:
            - containerPort: 5050

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"

            limits:
              memory: "128Mi"
              cpu: "500m"
