Job-Portal/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-portal-service
  labels:
    app: job-portal
spec:
  type: ClusterIP
  selector:
    app: job-portal
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
